--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -2,6 +2,8 @@ guestbook.title = Gästebuch
 guestbook.useajax = Use JavaScript (Page won't reload)
 
 guestbook.form.title = Eintrag hinzufügen
+guestbook.form.email = E-Mail
+guestbook.form.email.required = Bitte geben Sie eine E-Mail Adresse an.
 guestbook.form.name = Name
 guestbook.form.name.required = Bitte geben Sie einen Namen an.
 guestbook.form.text = Text
